grid and buttons validated

--- a/index.html
+++ b/index.html
@@ -7,5 +7,70 @@
     <link rel="stylesheet" href="index.css" />
     <title>Document</title>
   </head>
-  <body></body>
+  <body>
+    <header>
+      <h1>unleash the bats</h1>
+    </header>
+    <nav id="nav">
+      <ul>
+        <li>about</li>
+        <li>history</li>
+        <li>bands</li>
+        <li>redemption</li>
+      </ul>
+    </nav>
+    <input class="navButton"
+       type="button"
+       value="nav">
+
+    <section id="about">
+      <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Debitis est
+        numquam non sunt, temporibus neque nostrum aut fugiat velit nam adipisci
+        quo accusamus, dolores atque repellat ipsa tempore accusantium
+        doloremque! Lorem ipsum dolor sit amet consectetur adipisicing elit.
+        Eveniet neque officia cumque repudiandae quasi atque consectetur
+        dolores. Animi quo quam odio excepturi, illo, temporibus sint laudantium
+        molestiae asperiores fugiat tempora. Lorem ipsum dolor sit amet
+        consectetur, adipisicing elit. Inventore ut culpa voluptate quod labore
+        hic mollitia exercitationem eos. Facere sit exercitationem sunt quaerat
+        mollitia a alias facilis illo nobis necessitatibus. Lorem ipsum dolor,
+        sit amet consectetur adipisicing elit. Voluptatibus debitis facilis
+        molestiae maxime eius! Totam dolore excepturi, animi ullam dolorem
+        rerum, non impedit dolores tempora in, eos officiis consectetur illo!
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Et at
+        perferendis maiores, neque nesciunt, cum pariatur, non earum amet
+        voluptatem eaque explicabo perspiciatis doloremque exercitationem totam
+        magni maxime placeat fuga. Lorem ipsum dolor sit amet consectetur
+        adipisicing elit. Architecto quisquam similique repudiandae enim, nemo
+        alias doloribus eveniet quod suscipit, nam quis cum magnam officiis
+        delectus quos eaque pariatur quidem maiores. Lorem ipsum dolor sit amet
+        consectetur adipisicing elit. Similique reprehenderit ullam veniam
+        quisquam, nihil necessitatibus fugit, delectus et excepturi officiis
+        natus consequuntur repudiandae in eos. Amet doloribus iusto dolores ex?
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquid
+        architecto suscipit libero itaque accusamus impedit, provident rem fugit
+        quam quas quaerat, assumenda fuga iste eos, doloremque illo pariatur!
+        Iure, expedita? Lorem ipsum dolor sit, amet consectetur adipisicing
+        elit. Pariatur quas explicabo quibusdam voluptatum voluptas aspernatur,
+        magni architecto omnis! Aliquam, debitis quo officia ullam magnam
+        pariatur mollitia consequuntur perferendis corporis rem! Lorem ipsum
+        dolor sit amet consectetur adipisicing elit. Iusto, porro corrupti ullam
+        eos vitae ipsum nihil tempore! Nulla dolor quo exercitationem
+        consectetur sit possimus atque iusto eum. Natus, maiores culpa. Lorem
+        ipsum dolor sit amet consectetur adipisicing elit. Officia distinctio a
+        quidem libero ipsum laborum nobis enim, quas quasi maxime, debitis quia
+        voluptas numquam iure quam earum corrupti rerum. Facilis!
+      </p>
+    </section>
+    <input class="playerButton"
+       type="button"
+       value="player">
+    <aside id="aside"></aside>
+    <footer>
+      <div class="CC"></div>
+      <div class="links"></div>
+    </footer>
+    <script src="index.js"></script>
+  </body>
 </html>
