add sections and remote test

--- a/index.html
+++ b/index.html
@@ -62,6 +62,9 @@
         voluptas numquam iure quam earum corrupti rerum. Facilis!
       </p>
     </section>
+    <!-- <section></section>
+    <section></section>
+    <section></section> -->
 
     <aside id="aside">
       <audio controls>Your browser does not support the audio element.</audio>
