--- a/redemption.html
+++ b/redemption.html
@@ -32,31 +32,7 @@
       </ul>
     </nav>
 
-    <section id="about">
-      <p id="dicton">
-        "les hippies étaient des gens pas super cools qui voulaient paraître
-        sympas, les punks étaient des gens super cools qui voulaient avoir l'air
-        pas sympas"
-      </p>
-      <p id="anonyme">anonyme</p>
-      <img src="assets/sid_vicious.jpg" alt="Sid Vicious" title="Sid Vicious" />
-      <p class="text">
-        Fin des années 1970, le punk est mort. La radicalité laisse place au
-        conformisme et le NO FUTURE est rangé dans un tiroir au fond d’une cave,
-        toute la scène musicale rentre dans le rang. Toute? Non... Une poignée
-        d’irréductibles chevelus à la capillarité audacieuse résiste encore et
-        toujours à l’écœurante banalité du quotidien. Le post-punk pose ses
-        premières briques, la new-wave accorde ses synthés, et les morts sortent
-        de terre.
-      </p>
-      <img src="assets/siouxie.jpg" alt="Siouxie" title="Siouxie" />
-      <p class="text">
-        Dans une dynamique plus introvertie voire élitiste, quelques
-        avant-gardistes remanient les codes et imposent leur vision dans un
-        monde qu’ils jugent au mieux endormi, les chauves-souris se
-        réveillent...
-      </p>
-    </section>
+    <section class="redemption"></section>
 
     <aside id="aside">
       <img class="logoPlayer" src="/assets/logos/logo_the_cure.jpg" alt="">
