section redemption finished (visual only)

--- a/redemption.html
+++ b/redemption.html
@@ -32,7 +32,347 @@
       </ul>
     </nav>
 
-    <section class="redemption"></section>
+    <section id="redemption">
+      <h2 id="testTitle">Goth or not Goth</h2>
+      <p id="introTest">
+        teste ton aptitude au monde des ténèbres, vois si tu peux t’asseoir à la
+        droite d'Alistair Crowley ou si il est temps pour toi de faire un stage
+        de remise à niveau au train fantôme.
+      </p>
+      <form action="">
+        <label for="question1" class="question">le noir me va si bien</label>
+        <div class="raw">
+          <div class="line">
+            <input type="radio" name="question1" id="" />
+            <p>évidemment</p>
+          </div>
+          <div class="line">
+            <input type="radio" name="question1" id="" />
+            <p>quelle idée!</p>
+          </div>
+        </div>
+        <label for="question2" class="question"
+          >que serait le corps sans ornements? encore plus laid qu'il ne l'est
+          déjà..</label
+        >
+        <div class="raw">
+          <div class="line">
+            <input type="radio" name="question2" id="" />
+            <p>l'évidence..</p>
+          </div>
+          <div class="line">
+            <input type="radio" name="question2" id="" />
+            <p>mais ça fait mal!</p>
+          </div>
+        </div>
+        <label for="question3" class="question"
+          >la mort n'est qu'un concept, inutile d'en avoir peur on y passera
+          tous</label
+        >
+        <div class="raw">
+          <div class="line">
+            <input type="radio" name="question3" id="" />
+            <p>exact</p>
+          </div>
+          <div class="line">
+            <input type="radio" name="question3" id="" />
+            <p>brrrrr..</p>
+          </div>
+        </div>
+        <label for="question4" class="question"
+          >non je n'ai pas oublié de me coiffer, pauvre âme perdue
+          conformiste</label
+        >
+        <div class="raw">
+          <div class="line">
+            <input type="radio" name="question4" id="" />
+            <p>la critique est facile</p>
+          </div>
+          <div class="line">
+            <input type="radio" name="question4" id="" />
+            <p>je me brosse 100 fois tous les soirs</p>
+          </div>
+        </div>
+        <label for="question5" class="question">batcave rules</label>
+        <div class="raw">
+          <div class="line">
+            <input type="radio" name="question5" id="" />
+            <p>yeah!</p>
+          </div>
+          <div class="line">
+            <input type="radio" name="question5" id="" />
+            <p>quel rapport avec Batman?</p>
+          </div>
+        </div>
+        <label for="question6" class="question"
+          >Hello Kitty serait si mignone empalée sur une pomme d'amour</label
+        >
+        <div class="raw">
+          <div class="line">
+            <input type="radio" name="question6" id="" />
+            <p>oooh la p'tite bouille!</p>
+          </div>
+          <div class="line">
+            <input type="radio" name="question6" id="" />
+            <p>c'est dé-gueu-lasse</p>
+          </div>
+        </div>
+        <label for="question7" class="question"
+          >j'aime danser avec les fantômes au clair de Lune</label
+        >
+        <div class="raw">
+          <div class="line">
+            <input type="radio" name="question7" id="" />
+            <p>et chanter avec les banshees</p>
+          </div>
+          <div class="line">
+            <input type="radio" name="question7" id="" />
+            <p>vas te faire soigner</p>
+          </div>
+        </div>
+        <label for="question8" class="question"
+          >je ne suis pas sataniste, mais j'adore vous provoquer</label
+        >
+        <div class="raw">
+          <div class="line">
+            <input type="radio" name="question8" id="" />
+            <p>la base</p>
+          </div>
+          <div class="line">
+            <input type="radio" name="question8" id="" />
+            <p>tellement puéril..</p>
+          </div>
+        </div>
+        <label for="question9" class="question"
+          >je suis tellement torturé.. la solitude est mon amie, d'ailleurs
+          j'aime en faire profiter mes amis</label
+        >
+        <div class="raw">
+          <div class="line">
+            <input type="radio" name="question9" id="" />
+            <p>tant de générosité</p>
+          </div>
+          <div class="line">
+            <input type="radio" name="question9" id="" />
+            <p>quel ado..</p>
+          </div>
+        </div>
+        <label for="question10" class="question">cold-wave rules</label>
+        <div class="raw">
+          <div class="line">
+            <input type="radio" name="question10" id="" />
+            <p>hell yeah!</p>
+          </div>
+          <div class="line">
+            <input type="radio" name="question10" id="" />
+            <p>en Bretagne peut-être, mais en corse..</p>
+          </div>
+        </div>
+        <label for="question11" class="question"
+          >avant j'étais spooky-boy/girl, je suis passé médiéval(e)-goth mais
+          j'ai fini par me lasser, maintenant je suis
+          psycho-dark-cyber-trash-ebm-industrial-goth avec option corpo</label
+        >
+        <div class="raw">
+          <div class="line">
+            <input type="radio" name="question11" id="" />
+            <p>et un chouia de pastel-lolita-pagan</p>
+          </div>
+          <div class="line">
+            <input type="radio" name="question11" id="" />
+            <p>psysho-quoi??</p>
+          </div>
+        </div>
+        <label for="question12" class="question">dark-wave rules</label>
+        <div class="raw">
+          <div class="line">
+            <input type="radio" name="question12" id="" />
+            <p>damn yeah!</p>
+          </div>
+          <div class="line">
+            <input type="radio" name="question12" id="" />
+            <p>prends un lexomil</p>
+          </div>
+        </div>
+        <label for="question13" class="question"
+          >j'ai les intégrales de Charles Beaudelaire et Edgard Allan Poe, j'ai
+          aussi d'autres livres pour remplir ma bibliothèque</label
+        >
+        <div class="raw">
+          <div class="line">
+            <input type="radio" name="question13" id="" />
+            <p>j'aime la poésie</p>
+          </div>
+          <div class="line">
+            <input type="radio" name="question13" id="" />
+            <p>t'as pas chair de poule?</p>
+          </div>
+        </div>
+        <label for="question14" class="question"
+          >Est ce que j'écoute Mylène Farmer? sérieusement??</label
+        >
+        <div class="raw">
+          <div class="line">
+            <input type="radio" name="question14" id="" />
+            <p>qui ça?</p>
+          </div>
+          <div class="line">
+            <input type="radio" name="question14" id="" />
+            <p>MYLÈÈÈÈÈÈNE</p>
+          </div>
+        </div>
+        <label for="question15" class="question"
+          >pour la dernière fois, je ne suis pas skinhead, ET LES SKINHEADS NE
+          SONT PAS SENSES ETRE FACHOS!!</label
+        >
+        <div class="raw">
+          <div class="line">
+            <input type="radio" name="question15" id="" />
+            <p>culturez vous!</p>
+          </div>
+          <div class="line">
+            <input type="radio" name="question15" id="" />
+            <p>les skins sont des néos nazes</p>
+          </div>
+        </div>
+        <label for="question16" class="question">new-wave rules</label>
+        <div class="raw">
+          <div class="line">
+            <input type="radio" name="question16" id="" />
+            <p>rraaaah yeah!</p>
+          </div>
+          <div class="line">
+            <input type="radio" name="question16" id="" />
+            <p>va t'coiffer</p>
+          </div>
+        </div>
+        <label for="question17" class="question"
+          >oui, le punk est mort, mais son souvenir alimente notre vision</label
+        >
+        <div class="raw">
+          <div class="line">
+            <input type="radio" name="question17" id="" />
+            <p>c'es tellement beau...</p>
+          </div>
+          <div class="line">
+            <input type="radio" name="question17" id="" />
+            <p>des hirsutes bourrés qui puent.. quel exemple!</p>
+          </div>
+        </div>
+        <label for="question18" class="question"
+          >regardez-moi, je représente l'anti-conformisme, comme tous mes amis,
+          d'ailleurs on achète toutes nos fringues au même endroit</label
+        >
+        <div class="raw">
+          <div class="line">
+            <input type="radio" name="question18" id="" />
+            <p>et on boit du sang de vierge</p>
+          </div>
+          <div class="line">
+            <input type="radio" name="question18" id="" />
+            <p>ouais des fringues destroy à 200 balles chacune</p>
+          </div>
+        </div>
+        <label for="question19" class="question"
+          >les trucs en "ave" déchirent</label
+        >
+        <div class="raw">
+          <div class="line">
+            <input type="radio" name="question19" id="" />
+            <p>même l'after-shave</p>
+          </div>
+          <div class="line">
+            <input type="radio" name="question19" id="" />
+            <p>Ave Cesar, moritu.. ah non pardon</p>
+          </div>
+        </div>
+        <label for="question20" class="question"
+          >une bonne absynthe dans mon donjon, les menottes prêtes à
+          l'emploi..</label
+        >
+        <div class="raw">
+          <div class="line">
+            <input type="radio" name="question20" id="" />
+            <p>l'élégance sadienne</p>
+          </div>
+          <div class="line">
+            <input type="radio" name="question20" id="" />
+            <p>pervers alcolo..</p>
+          </div>
+        </div>
+        <label for="question21" class="question"
+          >une déco à la Vlad Tepes, la garantie d'une soirée d'enfer</label
+        >
+        <div class="raw">
+          <div class="line">
+            <input type="radio" name="question21" id="" />
+            <p>ça déchire!</p>
+          </div>
+          <div class="line">
+            <input type="radio" name="question21" id="" />
+            <p>Vlad qui?</p>
+          </div>
+        </div>
+        <label for="question22" class="question"
+          >quelqu'un a vu ma cuillère à absynthe?</label
+        >
+        <div class="raw">
+          <div class="line">
+            <input type="radio" name="question22" id="" />
+            <p>attends je te prête la mienne</p>
+          </div>
+          <div class="line">
+            <input type="radio" name="question22" id="" />
+            <p>
+              une cuillère avec des trous chez moi on appelle ça une passoire
+            </p>
+          </div>
+        </div>
+        <label for="question23" class="question"
+          >les antagonistes ont toujours plus de classe que les
+          protagonistes</label
+        >
+        <div class="raw">
+          <div class="line">
+            <input type="radio" name="question23" id="" />
+            <p>CQFD</p>
+          </div>
+          <div class="line">
+            <input type="radio" name="question23" id="" />
+            <p>non parce qu'à la fin c'est le pouvoir de l'amour qui gagne!</p>
+          </div>
+        </div>
+        <label for="question24" class="question"
+          >cette société basée sur le consumérisme et l'auto-centrisme me
+          dégoute, d'ailleurs je vais le dire sur Facebook, j'aurai sûrement
+          plein de likes</label
+        >
+        <div class="raw">
+          <div class="line">
+            <input type="radio" name="question24" id="" />
+            <p>soyons activistes</p>
+          </div>
+          <div class="line">
+            <input type="radio" name="question24" id="" />
+            <p>c'est ça, sur ton iPhone tout neuf</p>
+          </div>
+        </div>
+        <label for="question25" class="question"
+          >si tu veux insulter avec classe, insulte en allemand</label
+        >
+        <div class="raw">
+          <div class="line">
+            <input type="radio" name="question25" id="" />
+            <p>natürlich</p>
+          </div>
+          <div class="line">
+            <input type="radio" name="question25" id="" />
+            <p>c'est pas une langue, c'est un aboiement</p>
+          </div>
+        </div>
+        <input id="submQuizz" type="submit" value="check!" />
+      </form>
+    </section>
 
     <aside id="aside">
       <div id="cure">
@@ -92,7 +432,11 @@
       <div class="links">
         <img class="shareIcon" src="/assets//icons/icones_partage.png" alt="" />
         <img class="mailIcon" src="/assets/icons/icones_mail.png" alt="" />
-        <img class="facebookIcon" src="/assets/icons/icones_facebook.png" alt="" />
+        <img
+          class="facebookIcon"
+          src="/assets/icons/icones_facebook.png"
+          alt=""
+        />
       </div>
     </footer>
     <script src="index.js"></script>
