more few changes

--- a/history.html
+++ b/history.html
@@ -188,10 +188,14 @@
       </div>
     </footer>
 
-    <div id="CC">creative-commons</div>
-    <div id="share">partage</div>
-    <div id="mail">mail</div>
-    <div id="facebook">facebook</div>
+    <div id="CC">
+      ce site est sous license creative-commons bla bla bla.... les images et
+      vidéos de ce site sont la propriété de leurs auteurs respectifs bla bla..
+      les informations sont issues de Wikipedia bla..
+    </div>
+    <div id="share">le partage c'est important!</div>
+    <div id="mail">une bonne communication, y a qu'ça d'vrai</div>
+    <div id="facebook">sérieusement?</div>
     
     <script src="index.js"></script>
   </body>
