--- a/redemption.html
+++ b/redemption.html
@@ -248,7 +248,7 @@
         <div class="raw">
           <div class="line">
             <input type="radio" name="question17" id="question17" value="true"/>
-            <label for="question17">c'es tellement beau...</label>
+            <label for="question17">c'est tellement beau...</label>
           </div>
           <div class="line">
             <input type="radio" name="question17" id="question17b" value="false"/>
