fixing some errors

--- a/bands.html
+++ b/bands.html
@@ -19,9 +19,9 @@
       loop
     ></video>
     <header>
-      <input class="navButton" type="button" />
+      <div class="navButton" type="button" ></div>
       <h1>unleash the bats</h1>
-      <input class="playerButton" type="button" />
+      <div class="playerButton" type="button" ></div>
     </header>
     <nav id="nav">
       <ul>
