--- a/redemption.html
+++ b/redemption.html
@@ -19,9 +19,9 @@
       loop
     ></video>
     <header>
-      <input class="navButton" type="button" />
+      <div class="navButton" type="button" ></div>
       <h1>unleash the bats</h1>
-      <input class="playerButton" type="button" />
+      <div class="playerButton" type="button" ></div>
     </header>
     <nav id="nav">
       <ul>
@@ -39,7 +39,7 @@
         droite d'Alistair Crowley ou si il est temps pour toi de faire un stage
         de remise à niveau au train fantôme.
       </p>
-      <form action="">
+      <form>
         <p class="question">le noir me va si bien</p>
         <div class="raw">
           <div class="line">
@@ -172,7 +172,7 @@
         <div class="raw">
           <div class="line">
             <input type="radio" name="question11" id="question11" value="true"/>
-            <label for="question11">et un chouia de pastel-lolita-pagan</p>
+            <label for="question11">et un chouia de pastel-lolita-pagan</label>
           </div>
           <div class="line">
             <input type="radio" name="question11" id="question11b" value="false"/>
