--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
       loop
     ></video>
     <header>
-      <input class="navButton" type="button" />
+      <div class="navButton" type="button" ></div>
       <h1>unleash the bats</h1>
-      <input class="playerButton" type="button" />
+      <div class="playerButton" type="button" ></div>
     </header>
     <nav id="nav">
       <ul>
@@ -118,6 +118,7 @@
         <img
           class="ccIcon"
           src="/assets/icons/icones_CC.png"
+          alt="creative commons"
           id="ccButton"
           onclick="updateCcButton()"
         />
@@ -126,18 +127,21 @@
         <img
           class="shareIcon"
           src="/assets//icons/icones_partage.png"
+          alt="share"
           id="shareButton"
           onclick="updateShareButton()"
         />
         <img
           class="mailIcon"
           src="/assets/icons/icones_mail.png"
+          alt="contact"
           id="mailButton"
           onclick="updateMailButton()"
         />
         <img
           class="facebookIcon"
           src="/assets/icons/icones_facebook.png"
+          alt="facebook"
           id="facebookButton"
           onclick="updatefacebookButton()"
         />
