--- a/history.html
+++ b/history.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
@@ -19,9 +19,9 @@
       loop
     ></video>
     <header>
-      <div class="navButton" type="button" ></div>
+      <div class="navButton" ></div>
       <h1>unleash the bats</h1>
-      <div class="playerButton" type="button" ></div>
+      <div class="playerButton" ></div>
     </header>
     <nav id="nav">
       <ul>
@@ -159,7 +159,7 @@
         <p>Rosa+Crux - Omnes Qui Descendunt</p>
       </div>
       <div id="sopor">
-        <audio src="/assets/music/when_you _love_a_man.mp3" controls>
+        <audio src="/assets/music/when_you_love_a_man.mp3" controls>
           Your browser does not support the audio element.
         </audio>
         <p>Sopor Aeternus - When You Love a Man</p>
@@ -174,14 +174,33 @@
 
     <footer>
       <div class="CC">
-        <img class="ccIcon" src="/assets/icons/icones_CC.png" id="ccButton" onclick="updateCcButton()"/>
+        <img
+          class="ccIcon"
+          src="/assets/icons/icones_CC.png"
+          alt="creative commons"
+          id="ccButton"
+          onclick="updateCcButton()"
+        />
       </div>
       <div class="links">
-        <img class="shareIcon" src="/assets//icons/icones_partage.png" id="shareButton" onclick="updateShareButton()"/>
-        <img class="mailIcon" src="/assets/icons/icones_mail.png" id="mailButton" onclick="updateMailButton()"/>
+        <img
+          class="shareIcon"
+          src="/assets//icons/icones_partage.png"
+          alt="share"
+          id="shareButton"
+          onclick="updateShareButton()"
+        />
+        <img
+          class="mailIcon"
+          src="/assets/icons/icones_mail.png"
+          alt="contact"
+          id="mailButton"
+          onclick="updateMailButton()"
+        />
         <img
           class="facebookIcon"
           src="/assets/icons/icones_facebook.png"
+          alt="facebook"
           id="facebookButton"
           onclick="updatefacebookButton()"
         />
