--- a/index.html
+++ b/index.html
@@ -25,10 +25,10 @@
     </header>
     <nav id="nav">
       <ul>
-        <li><a href="/index.html">about</a></li>
-        <li><a href="/history.html">history</a></li>
-        <li><a href="/bands.html">bands</a></li>
-        <li><a href="/redemption.html">redemption</a></li>
+        <li><a href="/Unleash-the-bats/index.html">about</a></li>
+        <li><a href="/Unleash-the-bats/history.html">history</a></li>
+        <li><a href="/Unleash-the-bats/bands.html">bands</a></li>
+        <li><a href="/Unleash-the-bats/redemption.html">redemption</a></li>
       </ul>
     </nav>
 
