--- a/history.html
+++ b/history.html
@@ -44,7 +44,7 @@
       </p>
       <img
         class="himg"
-        src="/assets/pictures/siouxie_and_the_banshees.jpg"
+        src="/Unleash-the-bats/assets/pictures/siouxie_and_the_banshees.jpg"
         alt="Siouxie and the Banshees"
         title="Siouxie and the Banshees"
         id="himg1"
@@ -58,7 +58,7 @@
         gestation de plusieurs courants majeurs du rock, dont le rock gothique,
         le rock industriel, le rock indépendant ou le rock alternatif.
       </p>
-      <img class="bat" src="/assets/trans_bat.png" alt="bat" />
+      <img class="bat" src="/Unleash-the-bats/assets/trans_bat.png" alt="bat" />
       <p class="htext" id="hp3">
         Jon Savage et Nick Kent, travaillant respectivement pour les
         hebdomadaires anglais Sounds et le NME, sont les premiers à utiliser le
@@ -75,7 +75,7 @@
       </p>
       <img
         class="himg"
-        src="/assets/pictures/joy_division.jpg"
+        src="/Unleash-the-bats/assets/pictures/joy_division.jpg"
         alt="Joy Division"
         title="Joy Division"
         id="himg2"
@@ -93,7 +93,7 @@
         leur premier album comme « une de nos grosses influences [...] pour la
         façon inhabituelle de jouer de la guitare et de la batterie ».
       </p>
-      <img class="bat" src="/assets/trans_bat.png" alt="bat" />
+      <img class="bat" src="/Unleash-the-bats/assets/trans_bat.png" alt="bat" />
       <p class="htext" id="hp5">
         Rétrospectivement toutefois, le terme est réutilisé à grande échelle
         pour qualifier des groupes jouant une musique rejoignant certains
@@ -114,7 +114,7 @@
       </p>
       <img
         class="himg"
-        src="/assets/pictures/the_cure.jpg"
+        src="/Unleash-the-bats/assets/pictures/the_cure.jpg"
         alt="The Cure"
         title="The Cure"
         id="himg3"
@@ -176,7 +176,7 @@
       <div class="CC">
         <img
           class="ccIcon"
-          src="/assets/icons/icones_CC.png"
+          src="/Unleash-the-bats/assets/icons/icones_CC.png"
           alt="creative commons"
           id="ccButton"
           onclick="updateCcButton()"
@@ -185,21 +185,21 @@
       <div class="links">
         <img
           class="shareIcon"
-          src="/assets//icons/icones_partage.png"
+          src="/Unleash-the-bats/assets//icons/icones_partage.png"
           alt="share"
           id="shareButton"
           onclick="updateShareButton()"
         />
         <img
           class="mailIcon"
-          src="/assets/icons/icones_mail.png"
+          src="/Unleash-the-bats/assets/icons/icones_mail.png"
           alt="contact"
           id="mailButton"
           onclick="updateMailButton()"
         />
         <img
           class="facebookIcon"
-          src="/assets/icons/icones_facebook.png"
+          src="/Unleash-the-bats/assets/icons/icones_facebook.png"
           alt="facebook"
           id="facebookButton"
           onclick="updatefacebookButton()"
